...
    <string name="quantity_error_superior">Ne peut pas être supérieur à 999</string>
    <string name="not_only_number">Le label ne peut pas contenir que des chiffres</string>
    <string name="number_only">Ce champ n\'accepte que des chiffres</string>
    <string name="add_event_title">Ajouter un nouvel événement</string>
    <string name="submit_event_title">Ajouter</string>
    <string name="current_event_title_text">Titre</string>
    <string name="current_event_description_text">Description (optionnel)</string>
    <string name="current_event_place_text">Lieu</string>
    <string name="current_event_all_day_text">Toute la journée</string>
    <string name="add_new_inventory_item_title">Ajouter un nouvel item</string>
    <string name="no_inventory_items_title">Aucun item sauvegardé.</string>
    <string name="cancel">Annuler</string>
    <string name="start">Début</string>
...
