...
                expanded = expanded,
                onExpandedChange = { expanded = !expanded }) {
                TextField(
                    modifier = modifier
                        .fillMaxWidth()
                        .menuAnchor()
                        .semantics { contentDescription = "cats dropdown" },
                    readOnly = true,
                    value = if (state.currentNoteId == 0) {
                        selectedCatText
                    } else {
                        availableCats.values.firstOrNull { it.id.toInt() == state.currentCatId }?.name
                            ?: ""
...
