...
    return NoteFeedUiState.Success(
        listOf(
            Note(
                1,
                1,
                "",
                "catTest1",
                date = globalCurrentDay,
                content = "Descrption 1",
                title = "Note 1"
            ),
            Note(
                2,
...
